<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.github.nahkd123</groupId>
		<artifactId>inking</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>inking-otd</artifactId>
	<name>Inking (OpenTabletDriver bridge)</name>
	<dependencies>
		<dependency>
			<groupId>io.github.nahkd123</groupId>
			<artifactId>inking-api</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.nahkd123</groupId>
			<artifactId>inking-internal-java21</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>21</release>
					<enablePreview>true</enablePreview>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.nahkd123</groupId>
				<artifactId>inking-maven-plugin</artifactId>
				<version>0.0.1-SNAPSHOT</version>
				<executions>
					<execution>
						<goals>
							<goal>strip-preview-flags</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>